Adds more default flags to the build.config.

--- a/small/build.config
+++ b/small/build.config
@@ -150,13 +150,31 @@ LIBRARY_PATHS=\
 # the C compiler. You can comment this line out with no ill-effects.
 #
 # Note that this does not override the existing flags, it only adds to
-# them
+# them.
+#
+# Here is a good list of flags for gcc and/or clang; remove those that
+# are unsupported by your compiler (some require GCC 15+):
+#
 EXTRA_COMPILER_FLAGS=\
-   -DNAME=Value\
-   -W -Wall -Wextra\
-   -Wdouble-promotion\
-   -Wconversion\
-   -Wno-sign-conversion
+-O2 -Wall -Wformat -Wformat=2 -Wconversion -Wimplicit-fallthrough \
+-Werror=format-security \
+-U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=3 \
+-D_GLIBCXX_ASSERTIONS \
+-fstrict-flex-arrays=3 \
+-fstack-clash-protection -fstack-protector-strong \
+-Wl,-z,nodlopen -Wl,-z,noexecstack \
+-Wl,-z,relro -Wl,-z,now \
+-Wl,--as-needed -Wl,--no-copy-dt-needed-entries\
+-Wtrampolines -fzero-init-padding-bits=all\
+-Wbidi-chars=any\
+-fPIE -pie\
+-fPIC -shared\
+-fcf-protection=full\
+-mbranch-protection=standard\
+-fno-delete-null-pointer-checks -fno-strict-overflow -fno-strict-aliasing -ftrivial-auto-var-init=zero\
+-Werror=implicit -Werror=incompatible-pointer-types -Werror=int-conversion\
+-fexceptions\
+-Werror\
 
 
 # ######################################################################
